# adbwifiswitch

./: .gitignore  LICENSE  README.md
adbwifiswitch/: AdbContext.cpp  AdbContext.h  AdbController.cpp  AdbController.h  AdbTask.cpp  AdbTask.h  Buffers.cpp  Buffers.h  CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  Config.cpp  Config.h  FileHandler.cpp  FileHandler.h  FilePoller.cpp  FilePoller.h  Logger.cpp  Logger.h  main.cpp
javaagent/: Readme.1st  prebuildapp-debug.apk
javaagent/adb-join-wifi/app/: build.gradle
javaagent/adb-join-wifi/app/src/main/java/com/steinwurf/adbjoinwifi/: CheckSSIDBroadcastReceiver.java  MainActivity.java
